--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,11 @@ button.primary.ghost.a {
 	margin: 0 7px 7px 0;
 	padding: 7px;
 }
+
+.background {
+  position:  absolute;
+  display:  block;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
